[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pinglinker"
version = "1.0.0"
description = "Professional internet speed test tool"
readme = "README.md"
authors = [{ name = "Nikita Parkovskyi" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "speedtest-cli>=2.1.3",
]
requires-python = ">=3.8"

[project.scripts]
pinglinker = "pinglinker.cli:cli"

[tool.setuptools.packages.find]
include = ["pinglinker*"]

